--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
